Added health checks with bug

--- a/AdvertApi.Models/AdvertApi.Models.csproj
+++ b/AdvertApi.Models/AdvertApi.Models.csproj
@@ -5,6 +5,7 @@
     <Authors>Panos Anastasiadis</Authors>
     <Company>none</Company>
     <Product>Web Advert MicroServices</Product>
+    <PackageId>AdvertApi.Models.panospd</PackageId>
   </PropertyGroup>
 
 </Project>
