Added username to AdvertModel and updated the nuget package

--- a/AdvertApi.Models/AdvertApi.Models.csproj
+++ b/AdvertApi.Models/AdvertApi.Models.csproj
@@ -6,6 +6,7 @@
     <Company>none</Company>
     <Product>Web Advert MicroServices</Product>
     <PackageId>AdvertApi.Models.panospd</PackageId>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
