--- a/AdvertApi/appsettings.json
+++ b/AdvertApi/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TopicArn": "arn:aws:sns:eu-west-2:464618713373:AdvertApiTopic"
 }
