updated csproj file to always include appsettings.json

--- a/AdvertApi/AdvertApi.csproj
+++ b/AdvertApi/AdvertApi.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\AdvertApi.Models\AdvertApi.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
